docs/v0.3.8/_sources/gallery/noise_sources/dark_current.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/noise_sources/dark_current.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_noise_sources_dark_current.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_noise_sources_dark_current.py:


Effect of Dark Current Noise on Detector Signal
===============================================

This example illustrates the impact of varying dark current levels on a flow cytometer detector signal.
The detector is initialized, dark current noise is applied, and the resulting signals are visualized
along with their distributions.

.. GENERATED FROM PYTHON SOURCE LINES 10-68



.. image-sg:: /gallery/noise_sources/images/sphx_glr_dark_current_001.png
   :alt: Raw Signals with Different Dark Current Levels, Histogram of Raw Signals
   :srcset: /gallery/noise_sources/images/sphx_glr_dark_current_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import matplotlib.pyplot as plt
    from FlowCyPy.detector import Detector
    from FlowCyPy.units import watt, ohm, ampere, second, hertz, degree, AU, kelvin

    from FlowCyPy import NoiseSetting

    NoiseSetting.include_noises = True
    NoiseSetting.include_shot_noise = False
    NoiseSetting.include_dark_current_noise = True
    NoiseSetting.include_thermal_noise = False
    NoiseSetting.include_RIN_noise = False

    # Define dark current levels
    dark_currents = [1e-9 * ampere, 5e-9 * ampere, 1e-8 * ampere]  # Dark current levels in amperes

    # Create a figure for signal visualization
    fig, (ax_signal, ax_hist) = plt.subplots(2, 1, figsize=(10, 6), sharex=False)

    # Loop over the dark current levels
    for dark_current in dark_currents:
        # Initialize the detector
        detector = Detector(
            name=f"{dark_current.magnitude:.1e} A",
            responsitivity=1 * ampere / watt,  # Responsitivity (current per power)
            resistance=50 * ohm,              # Load resistance
            numerical_aperture=0.2 * AU,      # Numerical aperture
            sampling_freq=1e6 * hertz,        # Sampling frequency
            phi_angle=0 * degree,             # Detector orientation angle
            temperature=300 * kelvin,         # Detector temperature
            dark_current=dark_current         # Dark current level
        )

        # Initialize the raw signal
        detector.init_raw_signal(run_time=200e-6 * second)

        # Add dark current noise to the raw signal
        detector._add_dark_current_noise_to_raw_signal()

        # Plot the raw signal on the first axis
        detector.plot(ax=ax_signal, add_raw=True, add_captured=False, show=False)

        # Plot the histogram of the raw signal
        ax_hist.hist(detector.dataframe['RawSignal'], bins=50, alpha=0.6, label=detector.name)

    # Customize the axes
    ax_signal.set_title("Raw Signals with Different Dark Current Levels")
    ax_signal.set_ylabel("Signal Voltage (V)")
    ax_signal.legend()

    ax_hist.set_title("Histogram of Raw Signals")
    ax_hist.set_xlabel("Signal Voltage (V)")
    ax_hist.set_ylabel("Frequency")
    ax_hist.legend()

    # Show the plots
    plt.tight_layout()
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.630 seconds)


.. _sphx_glr_download_gallery_noise_sources_dark_current.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: dark_current.ipynb <dark_current.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: dark_current.py <dark_current.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: dark_current.zip <dark_current.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
